--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "topsis",
-  "version": "1.3.1",
-  "description": "This is an implementation of TOPSIS algorithm for multi-criteria decision-making and prescriptive analytics.",
+  "name": "toMatrixArray",
+  "version": "0.5.0",
+  "description": "Extension of csvtojson package to turn results into an array of matrices",
   "main": "index.js",
   "scripts": {
     "test": "nyc mocha",
@@ -10,8 +10,7 @@
     "cover": "nyc mocha && nyc report --reporter=text-lcov | coveralls",
     "report-cover": "nyc report --reporter=text-lcov | coveralls",
     "clean": "nyc mocha && npm run lint -- --fix",
-    "vul-check" : "npm audit"
-    
+    "vul-check": "npm audit"
   },
   "precommit": [
     "lint",
@@ -19,19 +18,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/patelotech/topsis.git"
+    "url": "git+https://github.com/patelotech/toMatrixArray.git"
   },
   "keywords": [
-    "topsis",
-    "multi-criteria",
-    "decision",
-    "making",
-    "multi-attribute",
-    "business intelligence",
-    "prescriptive analytics",
-    "operations research",
-    "decision science",
-    "analytics"
+    "algebra",
+    "matrices",
+    "csv"
   ],
   "author": "Patricio J. Gerpe",
   "license": "MIT",
@@ -50,6 +42,8 @@
     "nyc": "^13.1.0"
   },
   "dependencies": {
-    "linear-algebra": "^3.1.4"
+    "csvtojson": "^2.0.8",
+    "linear-algebra": "^3.1.4",
+    "mathjs": "^5.4.1"
   }
 }
