--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "keywords": [
     "algebra",
     "matrices",
-    "csv"
+    "csv",
+    "operation research",
+    "decision science"
   ],
   "author": "Patricio J. Gerpe",
   "license": "MIT",
